封装release